<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/delta_tv"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/delta_txt"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/icon_delta"
        app:layout_constraintBottom_toBottomOf="@id/delta_tv"
        app:layout_constraintEnd_toStartOf="@+id/delta_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/andada"
        android:text="@string/pass_txt"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/delta_tv"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
      android:layout_margin="30dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:text="@string/pass_txt2"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/pass_txt"
        app:layout_constraintTop_toBottomOf="@id/delta_tv" />

    <LinearLayout
        android:id="@+id/lin_l1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/pass_txt"
        android:background="#5E6FE4"/>
    <TextView
        android:id="@+id/jfk_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jfk_txt"
        android:textSize="38dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/lin_l1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/nyc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/armata"
        android:text="@string/nyc_txt"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jfk_txt" />
    <TextView
        android:id="@+id/sea_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sea_txt"
        android:textSize="38dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/lin_l1"
        app:layout_constraintStart_toEndOf="@id/jfk_txt"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="98dp"
        android:layout_marginTop="25dp"
       android:layout_marginEnd="10dp"/>
    <TextView
        android:id="@+id/seat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seattle_txt"
        android:fontFamily="@font/armata"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@id/sea_txt"
        app:layout_constraintTop_toBottomOf="@id/sea_txt"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/dep_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dep_txt"
        android:fontFamily="@font/armata"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/nyc_txt"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/time_arrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arr_txt"
        android:textStyle="bold"
        android:fontFamily="@font/armata"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dep_txt"
        app:layout_constraintStart_toStartOf="@id/seat_txt"
        app:layout_constraintTop_toBottomOf="@id/seat_txt"
        android:layout_marginTop="35dp"/>
    <TextView
        android:id="@+id/time_depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="8:00AM"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/time_arrive"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11:17AM"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/time_arrive"
        app:layout_constraintLeft_toRightOf="@+id/time_depart"
        app:layout_constraintTop_toBottomOf="@id/time_arrive"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/time_boarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_boarding"
        android:textStyle="bold"
        android:fontFamily="@font/armata"
        android:textColor="@color/grey"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/lin_l1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/time_board2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7:30AM"
        android:textColor="#454545"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/time_boarding"
        app:layout_constraintStart_toStartOf="@id/time_boarding"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fly_txt"
        android:textStyle="bold"
        android:fontFamily="@font/armata"
        android:textColor="@color/grey"
        android:textSize="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/time_boarding"
        app:layout_constraintTop_toBottomOf="@id/lin_l1"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/time_arrive"/>
    <TextView
        android:id="@+id/d2218"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_board"
        android:textColor="#454545"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/flight"
        app:layout_constraintStart_toStartOf="@id/flight"
        app:layout_constraintLeft_toRightOf="@id/time_boarding"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/gate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gate_txt"
        android:textStyle="bold"
        android:fontFamily="@font/armata"
        android:textColor="@color/grey"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/time_board2"
        app:layout_constraintStart_toStartOf="@id/time_board2"
        android:layout_marginTop="35dp"/>
    <TextView
        android:id="@+id/numb_gate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txt_d4"
        android:textColor="#454545"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/gate"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/gate"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_seat"
        android:textStyle="bold"
        android:fontFamily="@font/armata"
        android:textColor="@color/grey"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/numb_gate"
        app:layout_constraintStart_toStartOf="@id/numb_gate"
        android:layout_marginTop="35dp"
        android:id="@+id/seat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_seat"
        android:textColor="#454545"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/seat"
        app:layout_constraintStart_toStartOf="@id/seat"/>
<ImageView
    android:layout_width="90dp"
    android:layout_height="80dp"
android:background="@drawable/ic_launcher_foreground"
app:layout_constraintStart_toEndOf="@id/nyc_txt"
app:layout_constraintTop_toTopOf="@id/jfk_txt"
android:layout_marginLeft="20dp"
app:layout_constraintRight_toLeftOf="@id/sea_txt"/>
<ImageView
    android:layout_width="190dp"
    android:layout_height="190dp"
android:background="@drawable/ic_qr"
app:layout_constraintTop_toBottomOf="@id/d2218"
app:layout_constraintStart_toStartOf="@id/d2218"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintRight_toRightOf="parent"
android:layout_marginRight="35dp"
android:layout_marginTop="20dp"/>











</androidx.constraintlayout.widget.ConstraintLayout>